frontendの基礎作成

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - 3001:3000
     networks:
       - react_express
+    command: npm start
   backend:  # Express用のコンテナ
     build: .
     container_name: back
