--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -28,4 +28,4 @@ services:
       - react_express
     environment:
       CHOKIDAR_USEPOLLING: 1
-    command: bash -c "npm install && npm start"
+    command: bash -c "npm install && npm run dev"
