--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       - 3001:3000
     networks:
       - react_express
+    depends_on:
+      - backend #TODO
     command: bash -c "npm install && npm start"
   backend:  # Express用のコンテナ
     build: .
